--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^1.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "prettier": "^3.0.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.5"
   }
