--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && npm test"
-    }
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -15,8 +10,7 @@
     "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "prepare": "husky install",
-    "test": "vitest --run",
-    "pre-commit": "eslint . --fix"
+    "test": "vitest --run"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -43,11 +37,11 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "husky": "^8.0.0",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vitest": "^0.34.1"
+    "vitest": "^0.34.1",
+    "husky": "^8.0.0"
   }
 }
